tweaked the spiral radius

--- a/hatchHandleVars.cfg
+++ b/hatchHandleVars.cfg
@@ -1,4 +1,4 @@
-res = 2;
+res = 0.5;
 big = 200;
 lil = 0.01;
 
@@ -32,14 +32,15 @@ spiralNegH = pivotCylH;
 
 leadEdgeR = 3;
 leadEdgeA = 27;
-leadEdgeH = 50;
+leadEdgeH = 80;
 leadEdgeOS = [22,-12 + leadEdgeR,0];
 leadEdgeRot = [0,-90,0];
 spiralOS = [22,-12+leadEdgeR * (1-sin(leadEdgeA)),leadEdgeR * cos(leadEdgeA)];
-spiralR = 50;
+spiralR = leadEdgeH;
 spiralBaseCylR = spiralR;
 spiralBaseCylH = leadEdgeR * cos(leadEdgeA);
 spiralBaseCylOS = [spiralOS[0],spiralOS[1],0];
+spiralCutR = 29;
 
 handleMinkR = 2;
 
