--- a/hatchHandleVars.cfg
+++ b/hatchHandleVars.cfg
@@ -1,4 +1,4 @@
-res = 0.5;
+res = 2;
 big = 200;
 lil = 0.01;
 
@@ -54,6 +54,12 @@ handle2OS = [44,0,handleMinkR];
 
 handle3Dims = [120,handleFullY,10 - 2 * handleMinkR];
 handle3OS = [handle3Dims[0]/2,0,handleMinkR];
+
+handle4Dims = [10,handle3Dims[1],handle3Dims[2]];
+handle4OS = [118,0,handleMinkR];
+
+handle5Dims = [5,handle3Dims[1],15];
+handle5OS = [121,0,handleMinkR];
 
 handleHull1Dims = [lil,handleFullY,pivotCylH];
 handle1Hull1OS = [handle1Dims[0]/2,0,0];
